nginx-mock-app.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-mock-app
  namespace: default
  labels:
    app: nginx-mock-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: app.wsl.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-mock-app
            port:
              number: 80
